# AI-Basics

./: .gitignore  Q&A-Minute.md  README.md  pyproject.toml
Agents/search_system/: AGENTS.md  README.md  main.py  pyproject.toml
Agents/search_system/agents/: tools.py
Agents/search_system/agents/coordinator/: agent.py  candidates.py  evaluation.py  intake.py  recommendation.py
Agents/search_system/agents/critics/: critics.py  server.py
Agents/search_system/agents/planner/: planner.py  server.py
Agents/search_system/agents/websearcher/: server.py  websearcher.py
Agents/search_system/docs/: a2a_architecture_overview.md  a2a_architecture_practice.md  candidates.py  evaluation.py  intake.py  main.py  recommendation.py  run_all.py
Agents/search_system/specs/: implementation_plan.md  search_design.md
Agents/search_system/src/: main.py  run_all.py
DeepLearning/: xor_classifier.py
LLM/: Embeddings.ipynb  KG-RAG.py  MoE-antigravity.py  RAG-impl.py  Tooluse.py  encoding-decoding.py  minimum-graph-RAG.py  mixture-of-experts.py
LLM/plans/: implementation_plan.md
LLM/rust-transformer/: Cargo.toml
LLM/rust-transformer/docs/: tokenizer-guide.md
LLM/rust-transformer/src/: config.rs  (+3 more)
Tensors/: numpy_practice.py
data/: ds_config.json
docs/: Q&A-minute.md  phase2-configuration.md
specs/: encoding-decoding-specs.md  mixture-of-experts.md
useful_functions/: Conv_layers.py  EinsteinSummation.py  expert_models.py  gradient_descent.py  image_preprocessing.py  logistic_regression.py  model_load_save.py  one_hot_encoding.py  pandas_basics.py  tensor_board.py
