[project]
name = "search-system"
version = "0.1.0"
description = "Dynamic deep search agent system built on Google ADK and A2A"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google-adk>=1.0.0",
    "a2a-sdk>=0.1.0",
    "python-dotenv>=1.0.1",
    "pydantic>=2.7",
    "httpx>=0.27",
]

[dependency-groups]
dev = [
    "ruff>=0.6.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
